[NF] Added showing downloading speed, removed logging-interceptor

--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -44,5 +44,9 @@
         <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
         android:onClick="@{()-> vm.startTest()}"/>
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="center"
+                  android:text="@{vm.downloadSpeed}"/>
     </LinearLayout>
 </layout>
