--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -27,7 +27,7 @@
     <!--android:text="Button"-->
     <!--android:layout_width="wrap_content"-->
     <!--android:layout_height="wrap_content"-->
-    <!--android:onClick="@{() -> vm.startTest()}"-->
+    <!--android:onClick="@{() -> vm.onTestBtnClick()}"-->
     <!--android:id="@+id/button" app:layout_constraintTop_toTopOf="parent"-->
     <!--android:layout_marginTop="165dp" android:layout_marginEnd="147dp"-->
     <!--app:layout_constraintEnd_toEndOf="parent"/>-->
@@ -43,7 +43,11 @@
                   android:text="@{vm.stsServerUrl}"/>
         <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-        android:onClick="@{()-> vm.startTest()}"/>
+                android:background="@{vm.downloadAvailable ? @drawable/ic_stop_test : @drawable/ic_start_test}"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="30dp"
+        android:onClick="@{()-> vm.onTestBtnClick()}"/>
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
