--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -7,50 +7,48 @@
         <variable
                 name="vm"
                 type="com.beebetter.wifer.ui.homepage.HomePageVM"/>
+
+        <import type="com.beebetter.base.util.DataBindingUtil"/>
     </data>
-    <!--<androidx.constraintlayout.widget.ConstraintLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--tools:context=".ui.homepage.HomePageActivity">-->
-
-    <!--<TextView-->
-    <!--android:layout_width="100dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="@{vm.stsServerUrl}"-->
-    <!--app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--app:layout_constraintLeft_toLeftOf="parent"-->
-    <!--app:layout_constraintRight_toRightOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.526"-->
-    <!--app:layout_constraintVertical_bias="0.938" android:id="@+id/txt_closest_server"-->
-    <!--android:visibility="visible" android:padding="20dp" android:background="@android:color/holo_red_dark"/>-->
-    <!--<Button-->
-    <!--android:text="Button"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:onClick="@{() -> vm.onTestBtnClick()}"-->
-    <!--android:id="@+id/button" app:layout_constraintTop_toTopOf="parent"-->
-    <!--android:layout_marginTop="165dp" android:layout_marginEnd="147dp"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"/>-->
-
-    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
-    android:orientation="vertical">
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center"
-                  android:text="@{vm.stsServerUrl}"/>
+                  android:orientation="vertical">
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content">
+
+            <!-- STS SERVER URL -->
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="center"
+                      android:layout_margin="20dp"
+                      android:visibility="@{DataBindingUtil.visibleOrInvisible(vm.stsServerUrl!=null)}"
+                      android:text="@{vm.stsServerUrl}"/>
+
+            <!-- PING -->
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_gravity="center"
+                      android:textStyle="bold"
+                      android:layout_margin="20dp"
+                      android:visibility="@{DataBindingUtil.visibleOrInvisible(vm.stsServer.pingBdo.timeResponse!=null)}"
+                      android:text="@{String.format(@string/ping, vm.stsServer.pingBdo.timeResponse)}"/>
+        </LinearLayout>
+
         <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@{vm.downloadAvailable ? @drawable/ic_stop_test : @drawable/ic_start_test}"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="60dp"
                 android:layout_marginBottom="30dp"
-        android:onClick="@{()-> vm.onTestBtnClick()}"/>
+                android:onClick="@{()-> vm.onTestBtnClick()}"/>
+
+        <!-- DOWNLOAD SPEED -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
-                  android:text="@{vm.downloadSpeed}"/>
+                  android:visibility="@{DataBindingUtil.visibleOrInvisible(vm.downloadSpeed!=null)}"
+                  android:text="@{String.format(@string/download_speed, vm.downloadSpeed)}"/>
     </LinearLayout>
 </layout>
